2014-01-03  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Fix edge case with TRIE_CHAR_MAX as TrieChar.

	The trie input char with value TRIE_CHAR_MAX (255), was always
	skipped by double-array algorithms. Let's include it.

	* datrie/darray.c (da_has_children, da_output_symbols,
	  da_relocate_base, da_first_separate, da_next_separate):
	  - Include the last char in trie char iterations.

	* datrie/darray.c (da_first_separate, da_next_separate):
	  - Declare characters as TrieIndex type instead of TrieChar,
	    to prevent infinite loop due to unsigned char overflow.

	Thanks Naoki Youshinaga for the report, test case, and analysis.

2013-10-25  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Fix comiler warnings in tests.

	* tests/test_walk.c (main):
	  - Remove unused var i;
	  - Remove extra printf() args.
	* tests/test_iterator.c:
	  - Add missing #include for free().
	* tests/test_walk.c (walk_dict), tests/utils.c (dict_src):
	  - Cast string literals to (AlphaChar *) to fix signedness
	    differences.

2013-10-25  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.ac: Post-release version suffix added.

2013-10-22  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* NEWS, configure.ac:
	=== Version 0.2.7.1 ===

2013-10-21  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.ac: Bump library versioning to reflect API addition.
	(Change missing in previous release)

2013-10-21  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.ac: Post-release version suffix added.

2013-10-21  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* NEWS, configure.ac:
	=== Version 0.2.7 ===

2013-10-21  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Add missing distributed file.

	* tests/Makefile.am:
	  - Add utils.h to distribution.

2013-10-20  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Reorder tests from primitive to applied.

	* tests/Makefile.am:
	  - Test walk & iterator before store-retrieve & file.
